libcxx/test/std/time/time.zone/time.zone.zonedtime/types.verify.cpp
//===----------------------------------------------------------------------===//
//
// Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
// See https://llvm.org/LICENSE.txt for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
//===----------------------------------------------------------------------===//

// UNSUPPORTED: c++03, c++11, c++14, c++17
// UNSUPPORTED: no-filesystem, no-localization, no-tzdb

// XFAIL: libcpp-has-no-experimental-tzdb
// XFAIL: availability-tzdb-missing

// <chrono>

// template<class Duration, class TimeZonePtr = const time_zone*>
//
// If Duration is not a specialization of chrono::duration, the program is ill-formed.

#include <chrono>

std::chrono::zoned_time<int>
    v; // expected-error@*:* {{the program is ill-formed since _Duration is not a specialization of std::chrono::duration}}
